package genre;

public enum MovieGenre implements IGenre {
    CRIME,
    DRAMA,
    BIOGRAPHY,
    SPORT,
    HISTORY,
    ROMANCE,
    WAR,
    MYSTERY,
    ADVENTURE,
    FAMILY,
    FANTASY,
    THRILLER,
    HORROR,
    FILM_NOIR,
    ACTION,
    SCI_FI,
    COMEDY,
    MUSICAL,
    WESTERN,
    MUSIC
}