package genre;

public enum SeriesGenre implements IGenre {
    TALK_SHOW,
    DOCUMENTARY,
    CRIME,
    DRAMA,
    ACTION,
    ADVENTURE,
    COMEDY,
    FANTASY,
    ANIMATION,
    HORROR,
    SCI_FI,
    WAR,
    THRILLER,
    MYSTERY,
    BIOGRAPHY,
    HISTORY,
    FAMILY,
    WESTERN,
    ROMANCE,
    SPORT
}