package Genre;

public interface IGenre {




}
