import user.IUser;

public class LogIn {

    private IUser currentUser;
    private final ChillMedia cm;

    public LogIn(ChillMedia cm) {
        this.cm = cm;
    }

    private void signUp() {

    }

    private void signIn() {

    }

    private void createUser() {

    }

    public IUser getCurrentUser() {
        return currentUser;
    }
}